Use "Set.of()" instead of "Collections.unmodifiableSet(EnumSet.of())"